infrastructure/services/pihole/pihole-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ingress
  namespace: pihole
  annotations:
    cert-manager.io/cluster-issuer: cert-issuer
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - ${PIHOLE_CNAME}
    secretName: ${PIHOLE_SECRET_NAME}
  rules:
  - host: ${PIHOLE_CNAME}
    http:
      paths:
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: pihole-web
            port:
              number: 80
